[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/CharacterRig.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player_mult_FSM.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Core_SM_PlayerFSM.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Action_SM_PlayerFSM.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 38 )

[node name="Player_mult_FSM" type="KinematicBody2D"]
collision_mask = 130
script = ExtResource( 2 )

[node name="States" type="Node" parent="."]

[node name="Core_SM_PlayerFSM" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Action_SM_PlayerFSM" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Body" type="Node2D" parent="."]

[node name="CharacterRig" parent="Body" instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 0.8, 0.8 )
current = true
zoom = Vector2( 0.75, 0.75 )
limit_left = 0
limit_right = 3840
limit_bottom = 896
drag_margin_left = 0.66
drag_margin_top = 1.0
drag_margin_right = 0.81
drag_margin_bottom = 0.48
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
position = Vector2( 14.7886, 30.5875 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 6

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 30.588 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 6

[node name="RayCast2D3" type="RayCast2D" parent="Raycasts"]
position = Vector2( -15.789, 30.588 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 6

[node name="DropThruRayCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="DropThruRayCasts"]
position = Vector2( 14.7886, 30.5875 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 128

[node name="RayCast2D2" type="RayCast2D" parent="DropThruRayCasts"]
position = Vector2( 0, 30.588 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 128

[node name="RayCast2D3" type="RayCast2D" parent="DropThruRayCasts"]
position = Vector2( -15.789, 30.588 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 128

[node name="DirectionInput_rayCast" type="RayCast2D" parent="."]
cast_to = Vector2( 40, 0 )
collision_mask = 0
collide_with_areas = true
collide_with_bodies = false

[connection signal="end_throw_donut_anim_signal" from="Body/CharacterRig" to="." method="_on_CharacterRig_end_throw_donut_anim_signal"]
[connection signal="throw_item" from="Body/CharacterRig" to="." method="_throw_held_item"]
[connection signal="throw_signal" from="Body/CharacterRig" to="." method="_on_CharacterRig_Donuts_throw_signal"]
